# hermes-feishu-a2a

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-container.yml  release.yml
config/: agents.example.json  agents.example.yaml  group-announcement.md
docs/: architecture.md  best-practices.md  deployment.md  feishu-permissions.md  group-announcement.md  identity-boundary-postmortem.md  operations.md  permissions.md  troubleshooting.md
examples/: content-moderation.js  content-review.yaml  data-analysis.js  data-analysis.yaml  demo-data.json  multi-agent-qa.js  multi-agent-qa.yaml
scripts/: check_secrets.py  generate-config.js  init-group.js  render_readme_diagrams.py  validate-config.js
src/: cli.js  config.js  coordinator.js  feishu.js  health.js  index.js  logger.js  registry.js  security.js  server.js  task-store.js  workflow.js
src/hermes_a2a/: __init__.py  api.py  attachments.py  cli.py  config.py  coordinator.py  models.py  security.py  store.py  transport.py  workflows.py
tests/: core.test.js  test_api.py  test_attachments.py  test_config.py  test_security.py  test_transport.py  test_workflows.py
