[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hermes-feishu-a2a"
version = "0.1.2"
description = "A secure, observable multi-agent coordinator for Feishu group workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hermes Feishu A2A contributors" }]
dependencies = [
  "cryptography>=43.0",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "httpx>=0.27",
]

[project.scripts]
hermes-a2a = "hermes_a2a.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_a2a"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "UP017"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
